# BachelorsThesis

./: .gitignore  README.md
code/: .dockerignore  .editorconfig  .env  .pre-commit-config.yaml  README.md  docker-compose.yml  network.py  pyproject.toml  tasks.py
code/MatLab_MNIST_NN/: Layer.m  NeuralNetwork.m  main.m
code/backend/: backend.Dockerfile  init.sh  manage.py  requirements.txt
code/backend/FHEClassifier/: asgi.py  urls.py  wsgi.py
code/backend/FHEClassifier/settings/: base.py  prod.py
code/backend/classifier/: fields.py  serializers.py  urls.py  views.py
code/classifier/: .clang-format  .dockerignore  .gitignore  .nitpick.toml  ActivationLayer.cpp  CMakeLists.txt  DenseLayer.cpp  Dockerfile  Layer.cpp  Layer.h  Network.cpp  Network.h  classifier.Dockerfile  conanfile.txt  evaluate.cpp  main.cpp  main.py  multiplications.py  requirements.txt  tasks.py  tests.py  utils.h
code/frontend/: .nitpick.toml  frontend.Dockerfile  nginx.conf  nginx.run.sh  package.json
code/frontend/config/: webpack.config.js
code/frontend/public/: index.html
code/frontend/src/: App.css  App.js  ClassificationComponent.js  DemoImageComponent.js  ProbabilityDisplay.js  communicators.js
code/plots/: ciphertext-visualisation.npy  plots.py  rotdiff-layer1.csv  rotdiff-layer2.csv
code/training/: main.py  network.py  requirements.txt
presentation/: beamerthemetugraz2018.sty  customs.tex  examples-poi-nonewsline.tex  examples-poi.tex  examples-presentation.tex  examples-welcome.tex  presentation.tex
presentation/sections/: appendix.tex  ckks-scheme.tex  conclusion.tex  encrypted-ml.tex  implementation.tex  introduction.tex  lattice-crypto.tex  making-it-fast.tex  nice-maths-to-enjoy.tex  post-quantum-security.tex  results.tex
thesis/: .nitpick.toml  Makefile  README.md  customs.tex  iaikthesis.sty  macros.tex  sources.bib  thesis.bib  thesis.tex
thesis/chapters/: abstract.tex  appendix.tex  background.tex  conclusion.tex  homomorphic-encryption.tex  implementation.tex  introduction.tex  results.tex
thesis/figures/: bfv-schematic.tex  ciphertext-visualisation.tex  ckks-schematic.tex  gradient-descent.tex  lattice.tex  layer-1-and-2.tex  misclassifications.tex  mnist.tex  neural-network.tex  nth-roots-of-unity.tex  rotation-error.tex  taylor-relu.tex  venn-diagram.tex  wave-function.tex
